--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3'
 
 services:
   db:
-    image: mariadb
-    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW --max-connections=2000
+    image: mariadb:10.6
+    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW --max-connections=2000 --innodb-read-only-compressed=OFF
     restart: always
     volumes:
       - db:/var/lib/mysql
@@ -11,7 +11,7 @@ services:
       - backend
 
   app:  
-    image: nextcloud:apache
+    image: nextcloud:22-apache
     restart: always
     volumes:
       - nextcloud:/var/www/html
